--- a/portfolio.html
+++ b/portfolio.html
@@ -4,65 +4,52 @@
 <head>
   <meta charset="UTF-8">
   <title>Portfolio | Your Name</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
   <header id="masthead">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/Users/chrisalberg/~code/Homework/Bootstrap-Portfolio/index.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="/Users/chrisalberg/~code/Homework/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
-          <a class="nav-item nav-link" href="/Users/chrisalberg/~code/Homework/Bootstrap-Portfolio/contact.html">Contact</a>
-        </div>
-      </div>
-    </nav>
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
   </header>
 
   <div id="main-container" class="container">
-    <section class="row">
+    <section class="main-section">
       <h1>Portfolio</h1>
-      <section class="row">
 
-      <div class="col-sm-6 col-m-6 col-md-4 col-lg-4">
-        <img src="images/technics-q-c-640-480-1.jpg" class="img-fluid" alt="Word Guess">
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
 
         <h3>Word Guess</h3>
       </div>
-      <div class="col-sm-6 col-m-6 col-md-4 col-lg-4">
-        <img src="images/technics-q-c-640-480-2.jpg" class="img-fluid" alt="RPG Game">
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
         <h3>RPG Game</h3>
-      
-    </section>
-
-      <section class="row">
-
-      <div class="col-sm-6 col-m-6 col-md-4 col-lg-4">
-        <img src="images/technics-q-c-640-480-5.jpg" class="img-fluid" alt="Trivia Game">
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
-      <div class="col-sm-6 col-m-6 col-md-4 col-lg-4">
-        <img src="images/technics-q-c-640-480-7.jpg" class="img-fluid" alt="Rutgers Info Widget">
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
         <h3>Rutgers Info Widget</h3>
       </div>
-    </section>
-    <section class="row">
-
-      <div class="col-sm-6 col-m-6 col-md-4 col-lg-4">
-        <img src="images/technics-q-c-640-480-9.jpg" class="img-fluid" alt="Rock Paper Scissors">
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3>
       </div>
+
     </section>
 
   </div>
@@ -75,4 +62,3 @@
 </body>
 
 </html>
-
