--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/Users/chrisalberg/~code/Homework/Responsive-Portfolio/assets/css/style.css">
 </head>
 
 <body>
